# c_tic_tac_toe

./: .gitignore  .gptignore  README.md  TO-DO.txt  meson.build
.github/workflows/: build.yaml  linter.yaml  merge-gatekeeper.yaml  unit-tests-with-valgrind.yaml  unit-tests.yaml
docs/: input_architecture.drawio  print_cli_example.c
scripts/: compile_build.sh  create_mock.rb  create_runner.rb  format_code.sh  generate_header.py  generate_src.py  install_meson.sh  install_ruby.sh  lint_code_dot_c_custom.py  run_gdb_tests.sh  run_tests.sh  run_valgrind_tests.sh  setup_build.sh
src/: config.h  gardener.c  gardener.h  main.c  main.h  meson.build
src/config/: config.c  config.h  cp_config.c  cp_config.h  meson.build
src/display/: cli.c  cli.h  display.c  display.h  meson.build
src/game/: README.md  game.c  game.h  game_config.c  game_config.h  game_cp.h  game_state_machine.c  game_user.c  game_user.h  meson.build  user_move.h
src/game/game_state_machine/: game_config.c  game_config.h  game_sm_subsystem.c  game_sm_subsystem.h  game_state_machine.c  game_state_machine.h  game_states.h  game_user.c  game_user.h  meson.build  quit_sm_module.c  tmp_game_state_machine.c  user_move.h
src/game/game_state_machine/game_logic_sm/: game_logic_sm.c  game_logic_sm.h  meson.build  quit_state_machine.c
src/game/game_state_machine/mini_state_machines/: common.c  common.h  display_mini_machine.c  display_mini_machine.h  meson.build  moves_cleanup_mini_machine.c  moves_cleanup_mini_machine.h  quit_mini_machine.c  quit_mini_machine.h  user_move_mini_machine.c  user_move_mini_machine.h  user_turn_mini_machine.c  user_turn_mini_machine.h  win_mini_machine.c  win_mini_machine.h
src/game/game_state_machine/sub_state_machines/: common.c  common.h  meson.build  moves_cleanup_sm_module.c  moves_cleanup_sm_module.h  quit_sm_module.c  quit_sm_module.h  user_move_sm_module.c  user_move_sm_module.h
src/game/game_state_machine/user_move/: user_move.c  user_move.h
src/game/user_move/: meson.build  user_move.c  user_move.h
src/init/: README.md  init.c  init.h  meson.build
src/input/: README.md  input.c  input.h  input_common.h  input_cp.c  input_device.c  input_device.h  input_registration.c  input_registration.h  keyboard1.c  meson.build
src/input/keyboard/: keyboard.c  keyboard.h  keyboard1.c  keyboard1.h  keyboard2.c  keyboard2.h  keyboard_cp.c  keyboard_key_mapping_1.h  keyboard_keys_mapping.c  keyboard_keys_mapping.h  keyboard_keys_mapping_1.c  keyboard_keys_mapping_1.h  keyboard_keys_mapping_2.h  keyboard_registration.c  keyboard_registration.h  meson.build
src/interfaces/: meson.build  std_lib_interface.c  std_lib_interface.h
src/utils/: README.md  array_utils.c  array_utils.h  logging_utils.c  logging_utils.h  meson.build  registration_utils.c  registration_utils.h  signals_utils.c  signals_utils.h  std_lib_utils.c  std_lib_utils.h  subsystem_utils.c  subsystem_utils.h  subsystem_utils_cp.c  terminal_utils.c  terminal_utils.h
subprojects/: cmock.wrap  static_array.wrap  stumpless.wrap  unity.wrap
test/: README.md  meson.build  test_utils.c  test_utils.h
test/test_cmock.d/: meson.build
test/test_config.d/: meson.build  test_config.c
test/test_display.d/: meson.build  test_cli_display.c
test/test_game.d/: meson.build  test_game_config.c  test_game_state_machine_subsystem.c  test_quit_sm.c  test_user_move.c  test_win_sm.c
test/test_gardener.d/: meson.build  test_gardener.c
test/test_init.d/: meson.build  test_init.c
test/test_input.d/: meson.build  test_input.c  test_input_registration.c  test_keyboard.c  test_keyboard.c.cp  test_keyboard1.c
test/test_logging_utils.d/: meson.build  test_logging_utils.c
test/test_main.d/: meson.build  test_main.c
test/test_unity.d/: meson.build
test/test_utils.d/: meson.build  test_array_utils.c  test_logging_utils.c  test_registration_utils.c  test_subsystem_utils.c
test/wrappers/: array_utils_wrapper.h  cli_display_wrapper.h  config_wrapper.h  game_config_wrapper.h  game_sm_quit_wrapper.h  game_sm_user_move_wrapper.h  game_sm_win_wrapper.h  game_state_machine_subsystem_wrapper.h  init_wrapper.h  input_keyboard1_wrapper.h  input_keyboard_wrapper.h  logging_utils_wrapper.h  subsystem_utils_wrapper.h
